--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,15 +1,24 @@
-<h1>Results</h1>
+<% include partials/header %>
 
-<ul>
+<div class="header">
+	<h1>Results</h1>
+</div>
+
+<div class="container">
+	<div class="row">
 	<% dataVar["Search"].forEach(function(movie) { %>
-		<li> 
-			<strong>
-			<%= movie["Title"] %>
-			</strong>
-			 - <%= movie["Year"] %>
-		</li>
+			<img src= "<%= movie["Poster"] %>" >
+			<div class="title">
+				<strong>
+				<%= movie["Title"] %>
+				</strong>
+				 - <%= movie["Year"] %>
+			 </div>
 	<% }) %>
-</ul>
+	</div>
+</div>
 
-<!-- <a href="/">Search Again!</a> -->
+
 <button><a href="/">Search Again!</a></button>
+
+<%include partials/footer %>
