--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,6 +1,9 @@
+<% include partials/header %>
 <h1>Search For a Movie</h1>
 
 <form action="/results" method="GET">
 	<input type="text" placeholder="search movie" name="search">
 	<input type="submit">
 </form>
+
+<% include partials/footer %>
