--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,9 +1,13 @@
 <% include partials/header %>
-<h1>Search For a Movie</h1>
+<div class="header">
+	<h1>Search For a Movie</h1>
+</div>
 
-<form action="/results" method="GET">
-	<input type="text" placeholder="search movie" name="search">
-	<input type="submit">
-</form>
+<div class="form">
+	<form action="/results" method="GET">
+		<input id="searchBar" type="text" placeholder="movie title..." name="search">
+		<input id="buttonBox" type="submit">
+	</form>
+</div>
 
 <% include partials/footer %>
