--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,25 +1,24 @@
 <% include partials/header %>
-
-<div class="header">
-	<h1>Results</h1>
-</div>
-
+<div class="container">
+	<div id="text-box2">
+		<h1 class="display-4">The Results!</h1>
+		<p>These are the top results</p>
+	</div>		
+	<div class="row text-center" id="results-style">
 	<% dataVar["Search"].forEach(function(movie) { %>
-<div class="row">
-	<div class="column">
-			<img src= "<%= movie["Poster"] %>" >
-			<div class="title">
-				<strong>
-				<%= movie["Title"] %>
-				</strong>
-				 - <%= movie["Year"] %>
-			 </div>
+		<div class="col-6 col-md-4">
+			<div class="row">
+					<img src= "<%= movie["Poster"] %>" >
+					<div class="caption" id="text-cap">
+						<strong>
+						<%= movie["Title"] %>
+						</strong>
+						 - <%= movie["Year"] %>
+					 </div>
+			</div>
+	</div>
+	<% }) %>
+	<a class="btn btn-secondary btn-lg btn-block" id="search-btn" href="/" role="button">Search Again!</a>
 	</div>
 </div>
-	<% }) %>
-
-
-
-<button><a href="/">Search Again!</a></button>
-
 <%include partials/footer %>
