--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,13 +1,18 @@
 <% include partials/header %>
-<div class="header">
-	<h1>Search For a Movie</h1>
-</div>
-
-<div class="form">
-	<form action="/results" method="GET">
-		<input id="searchBar" type="text" placeholder="movie title..." name="search">
-		<input id="buttonBox" type="submit">
-	</form>
+<div class="container">
+	<div class="row">
+		<div id="text-box">
+			<h1 id="space" class="display-4">Search For A Movie</h1>
+			<form action="/results" method="GET">
+				<div class="form-group">
+					<input class="form-control form-control-lg" type="text" name="search" placeholder="movie title">
+				</div>
+				<div class="form-group">
+					<button class="btn btn-secondary btn-lg btn-block">Submit</button>
+				</div>
+			</form>
+		</div>
+	</div>
 </div>
 
 <% include partials/footer %>
